--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -278,9 +278,11 @@ html, body {
   display: block;
 }
 .mdl-head .mdl-menu__container {
-  z-index: 99;
+  z-index: 999;
 }
-
+.mdl-menu {
+  z-index: 999;
+}
 .background-menu-lower-right {
     background: white;
     height: 148px;
@@ -335,6 +337,10 @@ html, body {
   background:url('../images/users/deepak.png') bottom right 45% no-repeat #3F51B5;
 }
 
+.jack {
+  background:url('../images/users/jack.jpg') bottom left 1% no-repeat #3F51B5;
+}
+
 .karanraj {
   background:url('../images/users/karanraj.jpg') bottom right 50% no-repeat #3F51B5;
   background-size: cover;
@@ -357,7 +363,7 @@ html, body {
 }
 
 .sourav {
-  background:url('../images/users/sourav.jpg') bottom right 45% no-repeat #3F51B5;
+  background:url('../images/users/sourav.jpg') top right 45% no-repeat #3F51B5;
 }
 
 .vatsal {
@@ -367,3 +373,39 @@ html, body {
 .vikram {
   background:url('../images/users/vikram.jpg') bottom right 45% no-repeat #3F51B5;
 }
+
+dt {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 22px;
+  background: transparent;
+  text-align: center;
+  padding: 10px;
+  color:black;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+}
+
+dt:hover {
+  color:red;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition:0.50s;
+}
+
+dd {
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+}
+
+.hide {display:none;}
+
+.rc {color: #008042}
+.rd {color: #FF8C00}
+.rt {color: #0000FF}
+.mod {color: #4B0082}
